--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ tqdm==4.62.2
 traitlets==5.1.0
 twine==3.4.2
 typing-extensions==3.10.0.2
+unicorn==1.0.3
 urllib3==1.26.6
 virtualenv==20.7.2
 virtualenv-clone==0.5.7
