--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,6 @@ backcall==0.2.0
 backports.entry-points-selectable==1.1.0
 bandit==1.7.0
 bleach==4.1.0
-boto3==1.20.20
-botocore==1.23.20
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -22,7 +20,6 @@ Django==3.2.9
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
-django-storages==1.12.3
 docutils==0.17.1
 entrypoints==0.3
 filelock==3.0.12
@@ -31,6 +28,7 @@ flake8-django==1.1.2
 flake8-flask==0.9.3
 gitdb==4.0.7
 GitPython==3.1.18
+gunicorn==20.1.0
 idna==3.2
 importlib-metadata==4.8.1
 ipykernel==6.4.1
@@ -40,7 +38,6 @@ isort==5.9.3
 jedi==0.18.0
 jeepney==0.7.1
 Jinja2==3.0.1
-jmespath==0.10.0
 jsonschema==3.2.0
 jupyter-client==7.0.2
 jupyter-core==4.7.1
@@ -94,7 +91,6 @@ requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 rfc3986==1.5.0
 rope==0.19.0
-s3transfer==0.5.0
 SecretStorage==3.3.1
 Send2Trash==1.8.0
 six==1.16.0
@@ -111,6 +107,7 @@ tqdm==4.62.2
 traitlets==5.1.0
 twine==3.4.2
 typing-extensions==3.10.0.2
+unicorn==1.0.3
 urllib3==1.26.6
 virtualenv==20.7.2
 virtualenv-clone==0.5.7
