--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,18 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.9
-cryptography==36.0.0
 dj-database-url==0.5.0
 Django==4.0
 django-allauth==0.43.0
+django-contact-form==1.9
 django-countries==7.2.1
 django-crispy-forms==1.13.0
 django-storages==1.12.3
-idna==3.3
 oauthlib==3.1.1
 Pillow==8.4.0
-pycparser==2.21
 PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.0
 sqlparse==0.4.2
 stripe==2.63.0
-urllib3==1.26.7
+unicorn==1.0.3
