--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-crispy-forms==1.13.0
 django-storages==1.12.3
 oauthlib==3.1.1
 Pillow==8.4.0
+psycopg2==2.9.2
 PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2021.3
