--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,15 @@ django-contact-form==1.9
 django-countries==7.2.1
 django-crispy-forms==1.13.0
 django-storages==1.12.3
+gunicorn==19.7.1
 oauthlib==3.1.1
 Pillow==8.4.0
 psycopg2==2.9.2
+psycopg2-binary==2.9.2
 PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.0
 sqlparse==0.4.2
 stripe==2.63.0
-gunicorn==19.7.1
+unicorn==1.0.3
