--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
+boto3==1.20.22
+botocore==1.23.22
 dj-database-url==0.5.0
 Django==4.0
 django-allauth==0.43.0
@@ -8,6 +10,7 @@ django-countries==7.2.1
 django-crispy-forms==1.13.0
 django-storages==1.12.3
 gunicorn==19.7.1
+jmespath==0.10.0
 oauthlib==3.1.1
 Pillow==8.4.0
 psycopg2==2.9.2
@@ -16,6 +19,7 @@ PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.0
+s3transfer==0.5.0
 sqlparse==0.4.2
 stripe==2.63.0
 unicorn==1.0.3
