--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-allauth==0.47.0
 django-contact-form==1.9
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+django-environ==0.8.1
 django-rated-reviews==1.0.1
 django-storages==1.12.3
 gunicorn==19.7.1
