--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==4.0.5
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
+django-storages==1.12.3
 gunicorn==20.1.0
 oauthlib==3.2.0
 psycopg2==2.9.3
