--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.zoneinfo==0.2.1
 dj-database-url==0.5.0
 Django==4.0.5
 django-allauth==0.51.0
+django-countries==7.3.2
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-storages==1.12.3
