--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-heroku==0.3.1
 django-storages==1.12.3
 gunicorn==20.1.0
 oauthlib==3.2.0
+Pillow==9.1.1
 psycopg2==2.9.3
 PyJWT==2.4.0
 python3-openid==3.2.0
