--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-allauth==0.51.0
 django-countries==7.3.2
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
+django-model-utils==4.2.0
 django-storages==1.12.3
 gunicorn==20.1.0
 jmespath==1.0.1
