--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 boto3==1.24.17
 botocore==1.27.17
+cloudinary==1.29.0
 dj-database-url==0.5.0
 Django==4.0.5
 django-allauth==0.51.0
+django-cloudinary-storage==0.3.0
 django-countries==7.3.2
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
@@ -21,3 +23,4 @@ requests-oauthlib==1.3.1
 s3transfer==0.6.0
 sqlparse==0.4.2
 stripe==3.4.0
+whitenoise==6.2.0
