--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==3.2.7
 django-allauth==0.51.0
 django-crispy-forms==1.14.0
+django-storages==1.12.3
 oauthlib==3.2.0
 PyJWT==2.4.0
 python3-openid==3.2.0
