--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ oauthlib==3.2.1
 Pillow==9.2.0
 psycopg2==2.9.3
 PyJWT==2.5.0
+python-dotenv==0.21.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
