--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,13 @@ boto3==1.24.84
 botocore==1.27.84
 dj-database-url==1.0.0
 Django==4.1.1
+django-admin==2.0.1
 django-allauth==0.51.0
 django-countries==7.3.2
 django-crispy-forms==1.14.0
+django-excel-base==1.0.4
+django-excel-response2==3.0.2
+django-six==1.0.4
 django-storages==1.13.1
 gunicorn==20.1.0
 jmespath==1.0.1
@@ -16,8 +20,11 @@ psycopg2==2.9.3
 PyJWT==2.5.0
 python-dotenv==0.21.0
 python3-openid==3.2.0
+pytz==2022.4
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
+screen==1.0.1
 sqlparse==0.4.3
 stripe==4.1.0
 types-cryptography==3.3.23
+xlwt==1.3.0
