--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+boto==2.49.0
 boto3==1.24.84
 botocore==1.27.84
+crispy-bootstrap5==0.7
 dj-database-url==1.0.0
 Django==4.1.1
 django-admin==2.0.1
@@ -12,6 +14,7 @@ django-excel-base==1.0.4
 django-excel-response2==3.0.2
 django-six==1.0.4
 django-storages==1.13.1
+django-widget-tweaks==1.4.12
 gunicorn==20.1.0
 jmespath==1.0.1
 oauthlib==3.2.1
