--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-columns==0.1.0
 django-cors-headers==3.14.0
 django-countries==7.5.1
 django-crispy-forms==2.0
+django-dynamic-breadcrumbs==0.4.2
 django-storages==1.13.2
 jmespath==1.0.1
 oauthlib==3.2.2
