--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 backports.zoneinfo==0.2.1
 boto3==1.26.87
 botocore==1.29.87
+crispy-bootstrap4==2022.1
 dj-database-url==1.2.0
 Django==4.1.7
 django-allauth==0.52.0
