--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ django-crispy-forms==2.0
 django-dynamic-breadcrumbs==0.4.2
 django-storages==1.13.2
 django-view-breadcrumbs==2.4.1
+heroku==0.1.4
 jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==9.4.0
 PyJWT==2.6.0
+python-dateutil==1.5
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
