--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+backports.zoneinfo==0.2.1
 crispy-bootstrap4==2022.1
 dj-database-url==2.0.0
 Django==4.2.2
@@ -10,6 +11,7 @@ django-crispy-forms==2.0
 django-dynamic-breadcrumbs==0.4.2
 django-storages==1.13.2
 django-view-breadcrumbs==2.4.1
+gunicorn==20.1.0
 oauthlib==3.2.2
 Pillow==9.5.0
 PyJWT==2.7.0
@@ -17,4 +19,3 @@ python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
 stripe==5.4.0
-gunicorn==20.1.0
