--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ gunicorn==20.1.0
 oauthlib==3.2.2
 Pillow==9.5.0
 psycopg2==2.9.6
+psycopg2-binary==2.9.6
 PyJWT==2.7.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
