--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+boto3==1.26.153
+botocore==1.29.153
 crispy-bootstrap4==2022.1
 dj-database-url==2.0.0
 Django==4.2.2
@@ -12,14 +14,18 @@ django-dynamic-breadcrumbs==0.4.2
 django-storages==1.13.2
 django-view-breadcrumbs==2.4.1
 gunicorn==20.1.0
+jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==9.5.0
 postgres==4.0
 psycopg==3.1.9
 psycopg2==2.9.6
+psycopg2-binary==2.9.6
 psycopg2-pool==1.1
 PyJWT==2.7.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
+s3transfer==0.6.1
 sqlparse==0.4.4
 stripe==5.4.0
+urllib3==1.26.16
