--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ Pillow==9.5.0
 psycopg==3.1.9
 psycopg2==2.9.6
 PyJWT==2.7.0
+python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
