--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,9 @@
    "files.autoSave": "off",
    "workbench.colorTheme": "Default Light+ Experimental",
    "terminal.integrated.gpuAcceleration": "canvas",
-   "editor.defaultFormatter": "HookyQR.beautify"
+   "editor.defaultFormatter": "HookyQR.beautify",
+   "[python]": {
+      "editor.defaultFormatter": "ms-python.autopep8"
+   },
+   "python.formatting.provider": "none"
 }
