--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,10 @@ django-heroku==0.3.1
 django-storages==1.13.2
 Flask==2.3.2
 Flask-RESTful==0.3.10
+gunicorn==20.1.0
 itsdangerous==2.1.2
 oauthlib==3.2.2
+Pillow==9.5.0
 psycopg==3.1.9
 psycopg2==2.9.6
 PyJWT==2.7.0
