--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-allauth==0.54.0
 django-cors-headers==4.1.0
 django-countries==7.5.1
 django-crispy-forms==2.0
+django-dynamic-breadcrumbs==0.4.2
 django-heroku==0.3.1
 django-storages==1.13.2
 Flask==2.3.2
