--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ ansible-core==2.13.10
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
 blinker==1.6.2
+boto3==1.26.159
+botocore==1.29.159
 click==8.1.3
 column==0.4.3
 crispy-bootstrap4==2022.1
@@ -20,6 +22,7 @@ Flask==2.3.2
 Flask-RESTful==0.3.10
 gunicorn==20.1.0
 itsdangerous==2.1.2
+jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==9.5.0
 psycopg==3.1.9
@@ -30,7 +33,9 @@ python3-openid==3.2.0
 pytz==2023.3
 requests-oauthlib==1.3.1
 resolvelib==0.8.1
+s3transfer==0.6.1
 sqlparse==0.4.4
 stripe==5.4.0
+urllib3==1.26.16
 Werkzeug==2.3.6
 whitenoise==6.5.0
