--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 comm==0.2.0
 contourpy==1.2.0
+crispy-bootstrap4==2023.1
 cryptography==41.0.7
 cycler==0.12.1
 debugpy==1.8.0
