--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ attrs==23.1.0
 Babel==2.13.1
 beautifulsoup4==4.12.2
 bleach==6.1.0
+boto3==1.34.34
+botocore==1.34.34
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -45,6 +47,7 @@ ipython==8.17.2
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.3.2
 json5==0.9.14
 jsonpointer==2.4
@@ -120,6 +123,7 @@ requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.13.0
+s3transfer==0.10.0
 scikit-learn==1.3.2
 scipy==1.11.3
 seaborn==0.13.0
