--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ oauthlib==3.2.2
 pillow==10.2.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+PyGreSQL==6.0
 PyJWT==2.8.0
 python-dotenv==1.0.1
 python3-openid==3.2.0
