--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
-asgiref==3.7.2
+asgiref==3.8.1
 asttokens==2.4.1
 async-lru==2.0.4
 attrs==23.2.0
@@ -22,7 +22,7 @@ debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 dj-database-url==2.1.0
-Django==5.0.3
+Django==5.1
 django-allauth==0.61.1
 django-countries==7.5.1
 django-crispy-forms==2.1
@@ -125,6 +125,7 @@ scikit-learn==1.4.1.post1
 scipy==1.12.0
 seaborn==0.13.2
 Send2Trash==1.8.2
+setuptools==73.0.1
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
