--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ django-crispy-forms==2.4
 django-heroku==0.3.1
 django-storages==1.14.6
 dotenv==0.9.9
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 pillow==11.3.0
 psycopg2==2.9.10
 python-dotenv==1.1.1
